--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-<div class="container">
-  <div class="inputForm">
+  <!-- <div class="inputForm">
     <input (input)="changeFun($event)" [(ngModel)]="title"/>
     <p>{{title}}</p>
     <div>Chars:<p >{{numberOfChars}}</p>
@@ -9,5 +8,8 @@
   </div>
   <form >
 
-  </form>
-</div>
+  </form> -->
+  <header class="container">
+     <app-home></app-home>
+  </header>
+ 
