--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,1 @@
-  <!-- <div class="inputForm">
-    <input (input)="changeFun($event)" [(ngModel)]="title"/>
-    <p>{{title}}</p>
-    <div>Chars:<p >{{numberOfChars}}</p>
-    <div class="vowelsThis" *ngFor="let item of allVowels; trackBy: trackByFn" >
-    {{item}}</div>
-  </div>
-  </div>
-  <form >
-
-  </form> -->
-  <header class="container">
-     <app-home></app-home>
-  </header>
- 
+<router-outlet></router-outlet>
